--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-@import-normalize; /* bring in normalize.css styles */
-
+@import 'modern-normalize/modern-normalize.css';
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,4 +11,14 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding-left: 0;
+}
+h1,
+h2 {
+  margin: 0;
 }
