--- a/src/components/FilmList/FilmList.module.css
+++ b/src/components/FilmList/FilmList.module.css
@@ -3,7 +3,7 @@
   margin-left: auto;
   margin-right: auto;
   width: 200px;
-  height: 100%;
+  height: auto;
   background-image: url(/public/white-male-1847732_640.jpg);
   background-size: contain;
   background-repeat: no-repeat;
