added styles to MovieDetailes, SearchMovieForm

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -4,5 +4,6 @@
   margin-right: auto;
   margin-top: 20px;
   padding: 10px 15px;
-  border-radius: 15px;
+  border-radius: 5px;
+  background-color: transparent;
 }
