--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -3,3 +3,22 @@
   margin-right: auto;
   padding: 60px 30px;
 }
+@media screen and(min-width:480px) {
+  .container {
+    max-width: 480px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and(min-width:768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and(min-width:1200px) {
+  .container {
+    width: 1200px;
+  }
+}
