--- a/src/views/MovieDetailsPage/MovieDetailsPage.module.css
+++ b/src/views/MovieDetailsPage/MovieDetailsPage.module.css
@@ -10,6 +10,7 @@
 .link {
   margin-top: 30px;
   margin-right: 20px;
+  margin-bottom: 20px;
   font-size: 20px;
   font-weight: 600;
   color: black;
