--- a/src/components/MovieDetailes/MovieDetailes.module.css
+++ b/src/components/MovieDetailes/MovieDetailes.module.css
@@ -1,6 +1,6 @@
 .article {
   display: flex;
-  justify-content: space-around;
+  /* justify-content: space-around;  */
   width: 100%;
   margin-bottom: 20px;
 }
