--- a/src/views/MovieDetailsPage/MovieDetailsPage.module.css
+++ b/src/views/MovieDetailsPage/MovieDetailsPage.module.css
@@ -16,3 +16,13 @@
   color: black;
   text-decoration: none;
 }
+
+.linkActive {
+  margin-top: 30px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  font-size: 20px;
+  font-weight: 600;
+  color: rgb(233, 13, 13);
+  text-decoration: none;
+}
