--- a/src/views/Reviews/Reviews.module.css
+++ b/src/views/Reviews/Reviews.module.css
@@ -13,6 +13,8 @@
 
   width: 100px;
   height: 100px;
+  background-image: url('/public/white-male-1847732_640.jpg');
+  background-size: contain;
 }
 
 .textReview {
