--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -7,3 +7,10 @@
   border-radius: 5px;
   background-color: transparent;
 }
+
+.button:hover {
+  color: rgb(233, 13, 13);
+  border-color: rgb(233, 13, 13);
+  border-style: solid;
+  cursor: pointer;
+}
