--- a/src/views/MovieDetailsPage/MovieDetailsPage.module.css
+++ b/src/views/MovieDetailsPage/MovieDetailsPage.module.css
@@ -6,7 +6,12 @@
   border-radius: 5px;
   background-color: transparent;
 }
-
+.button:hover {
+  border-style: solid;
+  color: rgb(233, 13, 13);
+  border-color: rgb(233, 13, 13);
+  cursor: pointer;
+}
 .link {
   margin-top: 30px;
   margin-right: 20px;
